--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
     "multer": "^2.0.0",
     "nodemailer": "^7.0.3",
     "nodemon": "^3.1.10",
-    "otp-generator": "^4.0.1"
+    "otp-generator": "^4.0.1",
+    "uuid": "^11.1.0"
   }
 }
