--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@heroicons/react": "^2.2.0",
+    "@monaco-editor/react": "^4.7.0",
     "@mui/icons-material": "^7.1.0",
     "@mui/material": "^7.1.0",
     "@reduxjs/toolkit": "^2.8.2",
@@ -23,16 +24,21 @@
     "dotenv": "^16.5.0",
     "framer-motion": "^12.12.1",
     "input": "^1.0.1",
+    "prism-react-renderer": "^2.4.1",
     "react": "^19.1.0",
     "react-calendar-heatmap": "^1.10.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.0",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
+    "react-markdown": "^10.1.0",
     "react-otp-input": "^3.1.1",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.6.0",
     "react-select": "^5.10.1",
+    "react-split-pane": "^0.1.92",
+    "rehype-raw": "^7.0.0",
+    "remark-gfm": "^4.0.1",
     "tailwindcss": "^4.1.7"
   },
   "devDependencies": {
