--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
     "@google/generative-ai": "^0.24.1",
     "adm-zip": "^0.5.16",
     "bcrypt": "^6.0.0",
+    "cloudinary": "^2.6.1",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
@@ -25,6 +26,7 @@
     "nodemailer": "^7.0.3",
     "nodemon": "^3.1.10",
     "otp-generator": "^4.0.1",
+    "streamifier": "^0.1.1",
     "uuid": "^11.1.0"
   }
 }
