--- a/compiler/package.json
+++ b/compiler/package.json
@@ -20,6 +20,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.15.1",
     "nodemon": "^3.1.10",
+    "p-limit": "^3.1.0",
     "uuid": "^11.1.0"
   }
 }
