--- a/frontend/package.json
+++ b/frontend/package.json
@@ -33,6 +33,7 @@
     "react-dom": "^19.1.0",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
+    "react-katex": "^3.1.0",
     "react-markdown": "^10.1.0",
     "react-otp-input": "^3.1.1",
     "react-redux": "^9.2.0",
@@ -40,6 +41,7 @@
     "react-select": "^5.10.1",
     "react-split-pane": "^0.1.92",
     "react-syntax-highlighter": "^15.6.1",
+    "react-tooltip": "^5.29.1",
     "rehype-raw": "^7.0.0",
     "remark-gfm": "^4.0.1",
     "tailwindcss": "^4.1.7"
